--- a/myWorks/web/css/style.css
+++ b/myWorks/web/css/style.css
@@ -589,9 +589,11 @@ footer .familySite .familyMenu {position:absolute; top:45px; width:100%; padding
 .tabArea .tabcontent.current {display:block;}
 .tabArea .techcontent {display:none; float:left; width:75%; height:48rem; background-color:#fff; padding:2.8rem 1rem 2.8rem 5.6rem;}
 .tabArea .techcontent.current {display:block;}
-.tabArea .scroll { overflow-y: scroll; height:50rem; color:#672385; font-size:2rem;}
+.tabArea .scroll { overflow-y: scroll; color:#672385; font-size:2rem;}
 .tabArea .scroll h3 {margin-bottom:1rem;}
 .tabArea .scroll ul {margin-bottom:3rem;}
+.tabArea.device .scroll {height:50rem;} 
+.tabArea.normal .scroll {height:50rem;} 
 .techInfotxt {margin-bottom:7.7rem;}
 .techInfotxt strong {display: inline-block; border-radius:2rem; width:26rem; height:3rem; line-height:3rem; text-align:center; border:1px solid #672385; color:#672385; margin-right:1rem;}
 
