--- a/myWorks/web/css/style.css
+++ b/myWorks/web/css/style.css
@@ -813,12 +813,12 @@ footer .familySite .familyMenu {position:absolute; top:45px; width:100%; padding
 
 /* popup */
 .popLayer{display:table; position:fixed; left:0; top:0; bottom:0; height:100%; right:0; width:100%; background-color: rgba(0,0,0, 0.5); z-index:999; table-layout:fixed;}
-.popLayer .popupWrap{position: relative; top:50%; left:50%; width:80rem; padding-bottom:2rem; margin-left:-40rem;  background:#e4ddfa;}
+.popLayer .popupWrap{position: relative; top:50%; left:50%; width:80rem; padding-bottom:2rem; margin-left:-40rem;  background:#e4ddfa;border-radius:1rem 1rem 0 0;}
 .popLayer .popInner{display:table-cell; vertical-align:middle}
-.popLayer .popupWrap .popTit{position: absolute; left:0; top:0; width:100%; z-index:2; height:5.7rem; line-height:5.7rem; background:#672385;}
+.popLayer .popupWrap .popTit{position: absolute; left:0; top:0; width:100%; z-index:2; height:5.7rem; line-height:5.7rem; background:#672385; border-radius:1rem 1rem 0 0;}
 .popLayer .popupWrap .popTit span{font-size:1.8rem; color:#fff; display:block; padding-left:2rem; font-weight:700;}
 .popLayer .popupWrap .btnClose{display:block; overflow:hidden; position:absolute; right:0; top:0; height:5.7rem; width:5.7rem; z-index:3; text-indent:-999px; background:url(../images/landing/close2.png) no-repeat 50% 50%; background-size:2rem auto;} 
-.popLayer .popupWrap .popCont{height:45rem; position:relative; padding-top:5.7rem;}  
+.popLayer .popupWrap .popCont{height:45rem; position:relative; padding-top:5.7rem; border-radius:2rem 2rem 0 0;}  
 .popLayer .popupWrap .popCont:after {content:""; position:absolute; left:50%; top:50%; z-index: 1; margin-left:-.4rem; margin-top:.1rem;transform: rotate(180deg); border-top:26px solid transparent; border-right:52px solid #fff; border-bottom:26px solid transparent;}
 .popLayer .popupWrap .popCont .movBox { height:45rem; position: relative; z-index:2;}
 
