--- a/myWorks/web/css/style.css
+++ b/myWorks/web/css/style.css
@@ -886,8 +886,8 @@ footer .familySite .familyMenu {position:absolute; top:45px; width:100%; padding
   footer .familySite button i {padding-right:2rem; background:url(../images/footer/arrow_up.png@.png) no-repeat 100% 50%; background-size:1rem auto}
   footer .familySite .familyMenu {position:absolute; top:2.1rem; width:100%; padding:10px 0; display:none; background:#ffffff; z-index:4}
   .iconMenu {height:auto} 
-  .iconMenu ul li {width:33.33333%; margin-bottom:2.5rem}
-  .iconMenu ul li a {font-size:1.rem;  padding-top:3.5rem; font-size:1.2rem} 
+  .iconMenu ul li {width:33.33333%; padding-bottom:2.5rem;}
+  .iconMenu ul li a {font-size:1.rem;  padding-top:3.5rem; font-size:1.2rem; height:62px; } 
   .iconMenu ul li:nth-of-type(1) a {background:url(../images/footer/icon_01.png) no-repeat 50% 0; background-size:3rem auto}
   .iconMenu ul li:nth-of-type(2) a {background:url(../images/footer/icon_02.png) no-repeat 50% 0; background-size:3rem auto}
   .iconMenu ul li:nth-of-type(3) a {background:url(../images/footer/icon_03.png) no-repeat 50% 0; background-size:3rem auto}
