--- a/myWorks/web/css/style.css
+++ b/myWorks/web/css/style.css
@@ -998,7 +998,7 @@ footer .familySite .familyMenu {position:absolute; top:45px; width:100%; padding
   .mainSec-sec04 .inner .iconList li:nth-of-type(5) {background-size:6rem auto;}
   .mainSec-sec04 .inner .iconList li:nth-of-type(6) {background-size:6rem auto;}
   .mainSec-sec04 .inner .iconList li:nth-of-type(7) {background-size:6rem auto;}
-  .mainSec-sec04 .inner .iconList li:nth-of-type(8) {background-position:.5rem 0; background-size:5rem auto;} 
+  .mainSec-sec04 .inner .iconList li:nth-of-type(8) {background-position:.5rem 0; background-size:5rem auto; padding-top:.4rem;} 
 
   .mainSec-sec05 .inner {padding-top:3rem; height:60rem;} 
   .mainSec-sec05 .inner:after {left:50%; margin-left:-16.3rem; width:32.6rem; height:31.3rem; background: url(../images/landing/img_01.png) repeat 50% 0; background-size:32.6rem auto;} 
