--- a/myWorks/web/css/style.css
+++ b/myWorks/web/css/style.css
@@ -1245,7 +1245,7 @@ footer .familySite .familyMenu {position:absolute; top:45px; width:100%; padding
   .techList .dlWrap dl.icon07:after {background:url(../images/technology/icon07.png) no-repeat 40% 0; background-size:3rem auto}
   .techList .dlWrap dl.icon08:after {background:url(../images/technology/icon08.png) no-repeat 40% 0; background-size:3rem auto}
 
-  .colorBox.clearfix {background:#fff; padding-top:1rem;}
+  .colorBox.clearfix {background:none; padding-top:1rem;}
   .tech .hgroup.center span {margin-top:.5px; padding:.7rem 2rem; font-size:.9rem;} 
   .tech .hgroup.center span br {display:none;} 
   .tech .hgroup.center span.comTxt { padding:.7rem 2rem 0;  background:url(../images/technology/text_m.png) no-repeat 50% 0; background-size:32.6rem auto; height:4.6rem}
@@ -1260,7 +1260,9 @@ footer .familySite .familyMenu {position:absolute; top:45px; width:100%; padding
   .tabArea .techTab li.current span {font-weight:900; color:#fff;}
   .tabArea .tabcontent {width:100%; height:29rem; padding:1.4rem 0 1.4rem 2rem;} 
   .tabArea .techcontent {width:100%; height:20rem; padding:1.4rem 0 1.4rem 2rem;} 
-  .tabArea .scroll {height:auto; font-size:1rem; line-height:150%;}
+  .tabArea .scroll {font-size:1rem; line-height:150%;}
+  .tabArea.device .scroll {height: 26rem;}
+  .tabArea.normal .scroll {height:17rem;}
   .tabArea .scroll h3 {margin-bottom:1rem;}
   .tabArea .scroll ul {margin-bottom:2rem;}
   .techInfotxt {margin-bottom:2rem; padding:0; text-align:center;}
