--- a/myWorks/web/css/style.css
+++ b/myWorks/web/css/style.css
@@ -1025,6 +1025,7 @@ footer .familySite .familyMenu {position:absolute; top:45px; width:100%; padding
   .mainSec-sec06 .inner .contType01 ul li:nth-of-type(2) {background:url(../images/landing/icon12.png) no-repeat 0 0; background-size:6.4rem auto} 
   .mainSec-sec06 .inner .contType01 ul li:nth-of-type(3) {background:url(../images/landing/icon13.png) no-repeat 0 0; background-size:6.4rem auto} 
   .mainSec-sec06 .inner .contType01 ul li:nth-of-type(4) {background:url(../images/landing/icon14.png) no-repeat 0 0; background-size:6.4rem auto} 
+  .mainSec-sec06 .inner .contType01 ul li:nth-of-type(4) br {display:none;} 
   .mainSec-sec06 .inner .contType01 .btnW {text-align:center; display:block;}
   .mainSec-sec06 .inner .contType01 .btnW a {width: 19.1rem; height:2.4rem; line-height:2.4rem; font-size:1rem;}
 
@@ -1063,10 +1064,10 @@ footer .familySite .familyMenu {position:absolute; top:45px; width:100%; padding
   .mainSec-sec07 .inner .innerType02 .owl-carousel .item {overflow:hidden; letter-spacing:-0.23px; position: relative; background:#fff; border-radius:2rem 2rem 2rem 0;}
   .mainSec-sec07 .inner .innerType02 .owl-carousel .item div {position: relative;}
   .mainSec-sec07 .inner .innerType02 .owl-carousel .item div img {width:100%;}
-  .mainSec-sec07 .inner .innerType02 .owl-carousel .item div span { bottom:1.5rem; left:4rem; right:2rem; line-height:160%; font-size:1rem;}
-  .mainSec-sec07 .inner .innerType02 .owl-carousel .item p {position:relative; padding:2rem 3rem 0; font-size:.9rem; height:5rem}
+  .mainSec-sec07 .inner .innerType02 .owl-carousel .item div span { bottom:1.5rem; left:2rem; right:2rem; line-height:160%; font-size:1rem; text-align:center;}
+  .mainSec-sec07 .inner .innerType02 .owl-carousel .item p {position:relative; padding:2rem 1.5rem 0 2.2rem; font-size:.9rem; height:5rem}
   .mainSec-sec07 .inner .innerType02 .owl-carousel .item p strong {font-size:1rem;}
-  .mainSec-sec07 .inner .innerType02 .owl-carousel .item p button {margin-top:-1.1rem; width:2.2rem; height:2.2rem; background-size:2.2rem auto;}
+  .mainSec-sec07 .inner .innerType02 .owl-carousel .item p button {margin-top:-1.1rem; width:2.2rem; height:2.2rem; right:1.5rem; background-size:2.2rem auto;}
 
   .mainSec-sec07 .inner .innerType02 .owl-carousel .item p em {display:block; font-weight:700; font-size:1.4rem;}
   .mainSec-sec07 .inner .innerType02 .owl-nav {left:-2.8em; top:5rem}
